# MGraph-AI__Service__Cache__Client

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml
.template/: VERSION
_experiements/_previous/: test_Cache__Decorator.py  test_Cache__Decorator__Key__Generator.py  test_Cache__Decorator__integration.py
_experiements/client/: Cache__Client.py  Cache__Client__Requests.py  test_Cache__Client.py  test_Cache__Client__Health_Checks.py
_experiements/client_builder/: Fast_API__Client__Builder.py
docs/: README.md
mgraph_ai_service_cache__client/: __init__.py  config.py
mgraph_ai_service_cache__client/fast_api/: Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_cache__client/utils/: Version.py
mgraph_ai_service_cache_client/: __init__.py  config.py
mgraph_ai_service_cache_client/client/: Cache__Client__Config.py  Cache__Client__Health_Checks.py  Cache__Client__Requests.py  Cache__Service__Client.py  Cache__Service__Registry__Client.py  Client__Cache__Service.py
mgraph_ai_service_cache_client/client_builder/: Fast_API__Client__Builder.py
mgraph_ai_service_cache_client/client_contract/: Service__Fast_API__Client.py  Service__Fast_API__Client__Config.py  Service__Fast_API__Client__Requests.py
mgraph_ai_service_cache_client/decorator/: Cache__Decorator.py  Cache__Decorator__Configs.py  Cache__Decorator__Key__Generator.py
mgraph_ai_service_cache_client/schemas/: __init__.py
scripts/: release-script-v1.0.0.sh  run-locally.sh  setup-new-service-from-bare-github-repo.sh  update-version.sh
(+244 files in other folders)
