[tool.poetry]
name        = "mgraph_ai_service_cache__client"
version     = "v0.19.0"
description = "MGraph-AI__Service__Cache__Client"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Cache__Client"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Cache__Client"

[tool.poetry.dependencies]
python                     = "^3.12"
osbot-fast-api-serverless  = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"